<resources>
    <string name="app_name">AndroidRestApiVolley</string>
    <string name="buttoh_hapus">Buttoh Hapus</string>
    <string name="btnaddrole">btnAddRole</string>
    <string name="role_name">Role Name</string>
    <string name="entry_role_name">Entry Role Name</string>
    <string name="entry_description">Entry Description</string>
    <string name="description">Description</string>
    <string name="add_role">Add Role</string>
    <string name="role_names">Role Name</string>
    <string name="entry_role_names">Entry Role Name</string>
    <string name="descriptions">Description</string>
    <string name="entry_descriptions">Entry Description</string>
</resources>